2011-09-25  Ira Rosen  <ira.rosen@linaro.org>

	PR tree-optimization/50413
	* tree-vect-data-refs.c (vect_analyze_data_refs): Fail to vectorize
	a basic block if one of its data-refs can't be analyzed.

2011-09-25  Ira Rosen  <ira.rosen@linaro.org>

	PR tree-optimization/50412
	* tree-vect-data-refs.c (vect_analyze_group_access): Fail for
	accesses that require epilogue loop if vectorizing outer loop.

2011-09-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/50464
	* config/i386/sse.md (xop_pcmov_<mode>): Change operand 1 predicate
	to register_operand and operand 2 predicate to nonimmediate_operand.
	(xop_pcmov_<mode>256): Ditto.
	* config/i386/i386.c (ix86_expand_sse_movcc): When generating
	xop_pcmov, force op_true to register.  Also, force op_false to
	register if it doesn't satisfy nonimmediate_operand predicate.

2011-09-19  Alan Modra  <amodra@gmail.com>
	    Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/50341
	* config/rs6000/rs6000.md (call_indirect_aix32): Do not split the
	load of the indirect function's TOC from the call to prevent the
	compiler from moving the load of the new TOC above code that
	references the current function's TOC.
	(call_indirect_aix64): Ditto.
	(call_value_indirect_aix32): Ditto.
	(call_value_indirect_aix64): Ditto.
	(call_indirect_nonlocal_aix32_internal): Ditto.
	(call_indirect_nonlocal_aix32): Ditto.
	(call_indirect_nonlocal_aix64_internal): Ditto.
	(call_indirect_nonlocal_aix64): Ditto.
	(call_value_indirect_nonlocal_aix32_internal): Ditto.
	(call_value_indirect_nonlocal_aix32): Ditto.
	(call_value_indirect_nonlocal_aix64_internal): Ditto.
	(call_value_indirect_nonlocal_aix64): Ditto.

2011-09-19  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/49886
	* ipa-split.c (split_function): Do not change signature if it is
	not possible or there are attribute types.

2011-09-18  Eric Botcazou  <ebotcazou@adacore.com>
	    Iain Sandoe  <developer@sandoe-acoustics.co.uk>

	PR target/50091