@@ -1,3 +1,8 @@
+2011-09-26  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/50472
+	* gcc.dg/torture/pr50472.c: New testcase.
+
 2011-09-23  Jason Merrill  <jason@redhat.com>
 
 	Core 253
